# agent-injector-for-android

./: .gitignore  README.md  settings.gradle.kts
agent-injector/: build.gradle.kts
agent-injector/src/main/cpp/: CMakeLists.txt  agent_injector.cpp  jvmti.h  spake2.cpp
agent-injector/src/main/java/com/wuyr/agent_injector/: AgentInjector.kt
agent-injector/src/main/java/com/wuyr/agent_injector/adb/: AdbClient.kt  AdbWirelessPairing.kt  AdbWirelessPortResolver.kt  Spake2.kt
agent-injector/src/main/java/com/wuyr/agent_injector/exception/: AdbCommunicationException.kt  AgentAttachException.kt  PairingException.kt  ProcessNotFoundException.kt  RootNotDetectedException.kt  UidSwitchingException.kt
agent-injector/src/main/java/com/wuyr/agent_injector/utils/: HiddenApiExemptions.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wuyr/agent_injector_test/: Drug.kt
app/src/main/java/com/wuyr/agent_injector_test/activity/: BaseActivity.kt  MainActivity.kt
app/src/main/java/com/wuyr/agent_injector_test/adapter/: AppListAdapter.kt  SingleTypeAdapter.kt
app/src/main/java/com/wuyr/agent_injector_test/log/: ConsoleLogUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
